fix: add overflow-x: hidden;

--- a/style/css/style.css
+++ b/style/css/style.css
@@ -28,6 +28,7 @@ body {
     font-style: normal;
     font-weight: 400;
     line-height: 1.6;
+    overflow-x: hidden;
 }
 a {
     text-decoration: none;
